[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/player/Player.gd" type="Script" id=1]
[ext_resource path="res://art/lander.png" type="Texture" id=2]
[ext_resource path="res://sound/sfx/Game_Sound_Rocket_normal.ogg" type="AudioStream" id=3]
[ext_resource path="res://sound/sfx/sfx_hiss.wav" type="AudioStream" id=4]
[ext_resource path="res://art/themes/MainTheme.tres" type="Theme" id=5]
[ext_resource path="res://src/effects/ExhaustParticles.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 8, 9 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 16, 3 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="Curve" id=8]
max_value = 2.0
_data = [ Vector2( 0, 0.385227 ), 0.0, 0.0, 0, 0, Vector2( 0.0786517, 2 ), 0.0, 0.0, 0, 0, Vector2( 0.983146, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.0709677, 0.174194, 0.374194, 1 )
colors = PoolColorArray( 0, 0.750977, 1, 1, 1, 0.949408, 0.290323, 1, 1, 0.60082, 0.512097, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.732639, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=15]
colors = PoolColorArray( 0.327637, 0.327637, 0.327637, 1, 1, 1, 1, 1 )

[node name="Player" type="RigidBody2D"]
mass = 100.0
gravity_scale = 0.1
contacts_reported = 2
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11.5 )
shape = SubResource( 13 )

[node name="Label" type="Label" parent="."]
margin_left = -34.0
margin_top = -32.0
margin_right = 100.0
margin_bottom = -4.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 5 )
text = "Vel = 0.0"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
animation = "Idle"

[node name="EngineParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 11 )
emitting = false
amount = 128
lifetime = 0.5
explosiveness = 0.07
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.57
direction = Vector2( 0, 1 )
spread = 16.49
gravity = Vector2( 0, 17 )
initial_velocity = 200.0
damping = 58.41
damping_random = 0.41
scale_amount = 4.0
scale_amount_curve = SubResource( 8 )
color_ramp = SubResource( 10 )

[node name="ControlEngineParticles_1" type="CPUParticles2D" parent="."]
position = Vector2( 1, 13 )
emitting = false
amount = 32
lifetime = 0.2
explosiveness = 0.07
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.57
direction = Vector2( -1, 0 )
spread = 16.49
gravity = Vector2( 0, 17 )
initial_velocity = 200.0
damping = 58.41
damping_random = 0.41
scale_amount_curve = SubResource( 8 )

[node name="ControlEngineParticles_2" type="CPUParticles2D" parent="."]
position = Vector2( 0, -13 )
emitting = false
amount = 32
lifetime = 0.2
explosiveness = 0.07
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.57
spread = 16.49
gravity = Vector2( 0, 17 )
initial_velocity = 200.0
damping = 58.41
damping_random = 0.41
scale_amount_curve = SubResource( 8 )

[node name="EngineSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="ControlEginesSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="LegRaycast" type="RayCast2D" parent="."]
position = Vector2( -12, 9 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 8

[node name="LegRaycast2" type="RayCast2D" parent="."]
position = Vector2( 12, 9 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 8

[node name="ExhaustRay" type="RayCast2D" parent="."]
position = Vector2( 0, 11 )
enabled = true
cast_to = Vector2( 0, 96 )

[node name="ExhaustParticles" type="Node2D" parent="."]
position = Vector2( 0, 108 )
script = ExtResource( 6 )

[node name="L_Exhaust" type="CPUParticles2D" parent="ExhaustParticles"]
position = Vector2( 0, -1 )
rotation = -1.5708
emitting = false
amount = 64
local_coords = false
direction = Vector2( -1, 0 )
spread = 13.9
gravity = Vector2( 0, -16 )
initial_velocity = 100.0
damping = 100.0
damping_random = 0.73
scale_amount = 8.0
scale_amount_random = 0.68
scale_amount_curve = SubResource( 14 )
color_ramp = SubResource( 15 )

[node name="R_Exhaust" type="CPUParticles2D" parent="ExhaustParticles"]
position = Vector2( 0, -1 )
rotation = -1.5708
emitting = false
amount = 64
local_coords = false
spread = 13.9
gravity = Vector2( 0, -16 )
initial_velocity = 100.0
damping = 100.0
damping_random = 0.73
scale_amount = 8.0
scale_amount_random = 0.68
scale_amount_curve = SubResource( 14 )
color_ramp = SubResource( 15 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
